# gyges-tools

./: .gitignore  Cargo.toml  ENGINE_HISTORY.md  NOTES.md
src/: board.rs  engine_analyzer.rs  main.rs  ugi_engine.rs
training/: common.py  dataset_tools.py  main.py  policy.py  train_flat.py  train_pair.py  visualize_policy.py
